# rescuer_sim

./: README.md  control.launch~  mobile_base.launch~  quad.launch~  turtlebot_nav.launch~  whole_robot.launch~  whole_robot_base.launch~
guardian_robot/: README.md
guardian_robot/guardian_navigation/navigation_config/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base.launch  move_base_params.yaml  smoother.yaml
guardian_robot/guardian_navigation/navigation_slam/: move_base_slam.launch  slam_gmapping.launch
guardian_sim/: README.md
guardian_sim/guardian_control/: package.xml
guardian_sim/guardian_control/config/: gwam_control.yaml
guardian_sim/guardian_control/launch/: guardian_control.launch  gwam_control.launch
guardian_sim/guardian_description/urdf/: guardian.gazebo  guardian.urdf.xacro  guardian_arm.urdf.xacro  guardian_wam.urdf.xacro  gwam.gazebo  gwam.urdf.xacro
guardian_sim/guardian_gazebo/launch/: guardian.launch  guardian_tracks.launch  gwam.launch
guardian_sim/guardian_gazebo/worlds/: hall.world  hallobs.world  hallway.world
guardian_sim/robotnik_wam_description/launch/: gazebo_wam.launch
launch_robots/: CMakeLists.txt  package.xml  package.xml~
launch_robots/launch/: mobile_base_nav_sim.launch  mobile_base_nav_sim.launch~  mobile_manipulator_nav_sim.launch  mobile_manipulator_nav_sim.launch~  quadrotor_sim.launch  two_robots_sim.launch  two_robots_sim.launch~
robotnik_msgs/: README.md
tum_simulator/: README.md
tum_simulator/cvg_sim_gazebo_plugins/: CMakeLists.txt
uwsim/uwsim/data/scenes/: bomba.urdf  silla.urdf  (+9 more)
(+15 files in other folders)
