<?xml version="1.0"?>
<package>
  <name>guardian_control</name>
  <version>0.1.0</version>
  <description>The guardian_control package. This packages contains config files for Gazebo controllers</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <author email="rguzman@robotnik.es">Roberto Guzmán</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
